fixed alignment issue in navbar for small screens
the Home item was shifted little left cuz of padding of #toggle

--- a/style.css
+++ b/style.css
@@ -205,14 +205,6 @@ header .profile:hover .header-title {
   cursor: pointer;
 }
 
-#toggle {
-  position: relative;
-  display: none;
-  padding: 5px;
-  float: right;
-  cursor: pointer;
-  user-select: none;
-}
 
 ul.nav {
   position: absolute;
@@ -262,9 +254,11 @@ ul.nav li a:hover .nav-item {
 #toggle {
   position: relative;
   display: none;
-  padding: 21px;
+  padding: 1.5em 15px;
   float: right;
   cursor: pointer;
+  user-select: none;
+  padding-bottom: 0;
 }
 
 @media screen and (max-width: 980px) {
